# experiments-2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Code Review Guidelines.md  Coding Guidelines.md  README.md  main.cc
ca_expressions/: CMakeLists.txt  expressions.cc  expressions.h  utils.h
cast_utils/: CMakeLists.txt  cast_utils.cc  cast_utils.h  cast_utils_tests.cc
code_checks/: CMakeLists.txt  code_checks_demo.cc
expressions/: CMakeLists.txt  alg_terms.cc  alg_terms.h  expression.cc  expression.h  expressions_demo.cc  expressions_tests.cc  operator_node.cc  operator_node.h  utils.cc  utils.h
expressions2/: CMakeLists.txt  bin_operator_node.cc  bin_operator_node.h  consts.h  expression.cc  expression.h  expressions_tests.cc  expressionsv_tests.cc  operator_node.cc  operator_node.h  utils.cc  utils.h  zexpressionsv.h
expressions3/: expressionu.h
iterators/: CMakeLists.txt  iterator_demo.cc  primes.cc  primes.h  primes_tests.cc  type_check_demo.cc
ky_expressions/: CMakeLists.txt  expressions.cc  expressions.h  expressions_dd.cc  expressions_dd.h
multi_reader_async/: CMakeLists.txt  multi_reader_async_read_only.cc  multi_reader_async_with_write.cc
runtime_to_compiletime/: CMakeLists.txt  ct.cc
test_expressions/: CMakeLists.txt  benchmark_expressions.cc  expressions.h  test_expressions.cc
type_size_optimizations/: CMakeLists.txt  complex_call.cc  complex_call.h  price_setter.cc  price_setter.h  prices.h  prices_with_band.h  simple_call.cc  simple_call.h  type_size_optimizations_demo.cc
